MDEV-22934 Table disappear after two alter table command

- Inplace algorithm doesn't check foreign constraint during table
rebuild DDL. But copy algorithm does check FK constraint and fails
during rename operation. So copy algorithm doesn't check FK constraint
irrespective of the FOREIGN_KEY_CHECKS value.